# game_svr_demo

./: .gitignore  .gitmodules  CMakeLists.txt  clearBuild.sh  doc.lua  readme.txt  task.txt  说明.docx
com/: base_app.cpp  base_app.h  global_cfg.cpp  global_cfg.h
login/: CC_cfg.h  CMakeLists.txt  login_svr.cpp  login_svr.h  main.cpp  mf.cpp  mf.h
proto/: cs.proto  proto_2_cpp.sh  ss.proto
simulate_client/: CC_cfg.h  CMakeLists.txt  handle_cmd.cpp  main.cpp  user.cpp  user.h
statistics/: CC_cfg.h  CMakeLists.txt  main.cpp  mf.cpp  svr.cpp  svr.h
team/: CMakeLists.txt  main.cpp  mf.cpp  mf.h  svr.cpp  svr.h
tool/: copy_proto_cpp.bat  cpp_cfg_build.sh
vs/: premake5.lua
zone/: CC_cfg.h  CMakeLists.txt  main.cpp  mf.cpp  mf.h  svr.cpp  svr.h
